--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
     <div>
         <div class="drawBoard">
             <div class="tools">
-             <div></div>
-             <div></div>
-             <div></div>
-             <div></div>
-             <div></div>
-             <div></div>
-             <div></div>
-             <div></div>
-             <div></div>
-             <div></div>
-             <div></div>
-             <div></div>   
-            </div>
+             <div class="tools" id="undo"><img src="img/Frame 10.svg"></div>
+             <div class="tools" id="redo"><img src="img/lucide_forward.svg"></div>
+             <div class="tools" id="pen"><img src="img/3.svg"></div>
+             <div class="tools" id="arrow"><img src="img/4.svg"></div>
+             <div class="tools" id="selectionBold"><img src="img/5.svg"></div>
+             <div class="tools" id="eraser"><img src="img/6.svg"></div>
+             <div class="tools" id="colorsRounded"><img src="img/7.svg"></div>
+             <div class="tools" id="shape"><img src="img/8.svg"></div>
+             <div class="tools" id="text"><img src="img/9.svg"></div>
+             <div class="tools" id="table"><img src="img/10.svg"></div>
+             <div class="tools" id="chart"><img src="img/11.svg"></div>
+             <div class="tools" id="markup"><img src="img/12.svg"></div>
+             </div>
         </div>
     </div>
     <div>
